# omni-box

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  release-please-config.json  zensical.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: ci.yml  publish.yml
docs/: api_reference.md  architecture.md  index.md  migrations.md  storage_adapters.md  troubleshooting.md  user_guide.md
docs/examples/: dishka_integration.py
docs/guide/: advanced.md  configuration.md  quickstart.md
docs/reference/: index.md
examples/: complete_worker_setup.py  inbox_dispatcher.py  outbox_basic.py  saga_pattern.py
omni_box/: __init__.py
omni_box/application/: __init__.py  factories.py
omni_box/application/services/: __init__.py  consume.py  publish.py
omni_box/contrib/: __init__.py  dishka.py  settings.py
omni_box/core/: __init__.py  constants.py  exceptions.py
omni_box/core/converters/: __init__.py  event.py
omni_box/core/dispatch/: __init__.py  base.py  decorators.py  exceptions.py  names.py  processor.py  registry.py
omni_box/core/models/: __init__.py  entities.py  enums.py  schemas.py  types.py  validators.py
omni_box/core/pipeline/: __init__.py  builder.py  context.py  exceptions.py  pipeline.py  step.py
omni_box/core/pipeline/steps/: __init__.py  circuit_breaker.py  deduplication.py  dlq.py  handler.py  metrics.py  otel.py
omni_box/core/pipeline/strategies/: __init__.py  commit.py  fetch.py
omni_box/core/protocols/: __init__.py  consumers.py  features.py  handlers.py  metrics.py  publishers.py  repository.py  transaction.py
omni_box/core/services/: __init__.py  domain.py  maintenance.py  metrics.py  processor.py  results.py
omni_box/infra/: __init__.py
omni_box/infra/brokers/: __init__.py
omni_box/infra/brokers/kafka/: __init__.py  consumer.py  publisher.py
omni_box/infra/metrics/: __init__.py  prometheus.py
omni_box/infra/storage/: __init__.py
omni_box/infra/storage/postgres/: __init__.py  constants.py  orm.py
omni_box/infra/storage/postgres/repositories/: __init__.py  base.py  inbox.py  outbox.py
omni_box/testing/: __init__.py  async_utils.py
omni_box/utils/: __init__.py  backoff.py  datetime.py
tests/: conftest.py  helpers.py  models.py
tests/integration/: conftest.py  test_atomicity.py  test_capabilities.py  test_full_cycle.py
tests/integration/kafka/: test_consumer.py  test_publisher.py
tests/integration/postgres/: test_orm.py  test_repository.py  test_resilience.py  test_services.py  test_testing.py
tests/unit/: test_dishka.py  test_settings.py
tests/unit/application/: test_app_factories.py  test_consume.py  test_publish_app.py
tests/unit/core/: test_converters.py  test_exceptions.py  test_inbox_consume.py  test_invariants.py
tests/unit/core/converters/: test_event.py
tests/unit/core/dispatch/: test_decorators.py  test_dispatch_exceptions.py  test_dispatch_processor.py  test_names.py  test_registry.py
tests/unit/core/models/: test_entities.py  test_enums.py  test_schemas.py  test_types.py  test_validators.py
tests/unit/core/pipeline/: test_builder.py  test_context.py  test_pipeline.py  test_pipeline_exceptions.py  test_pipeline_factories.py  test_step.py  test_steps.py  test_strategies.py  test_strategies_commit.py  test_strategies_fetch.py
tests/unit/core/pipeline/steps/: test_circuit_breaker.py  test_deduplication.py  test_dlq.py  test_handler.py  test_metrics_step.py  test_new_steps.py  test_otel.py
tests/unit/core/protocols/: test_consumers.py  test_features.py  test_features_protocols.py  test_metrics_protocols.py  test_publishers.py  test_repository_protocols.py  test_transaction.py
tests/unit/core/services/: test_domain.py  test_maintenance.py  test_metrics.py  test_processor.py  test_results.py
tests/unit/infra/brokers/kafka/: test_consumer_pure.py  test_kafka_init.py  test_publisher_pure.py
tests/unit/infra/metrics/: test_prometheus.py
tests/unit/infra/storage/postgres/: test_base_errors.py  test_base_happy_paths.py  test_base_validation.py  test_inbox_errors.py  test_inbox_happy_paths.py  test_outbox_to_entity.py
tests/unit/utils/: test_backoff.py  test_datetime.py
