[project]
name = "omni-box"
dynamic = ["version"]
description = "Unified transactional messaging (Outbox & Inbox) library for async Python applications"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "Alex Shalaev", email = "shalaevad.alexey@gmail.com" }]
keywords = [
    "outbox",
    "inbox",
    "transactional-messaging",
    "kafka",
    "async",
    "asyncio",
    "postgres",
    "event-driven",
    "cdc",
    "distributed-systems",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.7.0,<3.0",
    "orjson>=3.10.0,<4.0.0",
    "structlog>=24.1.0,<26.0.0",
]

[project.urls]
Repository = "https://github.com/bedrock-python/omni-box"
Documentation = "https://bedrock-python.github.io/omni-box/"
Changelog = "https://github.com/bedrock-python/omni-box/blob/master/CHANGELOG.md"
"Bug Tracker" = "https://github.com/bedrock-python/omni-box/issues"

[project.optional-dependencies]
postgres = [
    "sqlalchemy[asyncio]>=2.0.30,<3.0.0",
    "asyncpg>=0.29.0",
]
kafka = [
    "aiokafka>=0.11.0,<1.0.0",
]
metrics = [
    "prometheus-client>=0.20.0",
]
opentelemetry = [
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
]
settings = [
    "pydantic-settings>=2.0.0",
]
dishka = [
    "dishka>=1.0.0",
]

[dependency-groups]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=5.0.0",
    "pytest-xdist>=3.6.0",
    "freezegun>=1.5.0",
    "polyfactory>=2.18.0",
    "testcontainers[kafka,postgres]>=4.14.1",
    "psycopg2-binary>=2.9.11",
    "sqlalchemy[asyncio]>=2.0.30,<3.0.0",
    "asyncpg>=0.29.0",
    "aiokafka>=0.11.0,<1.0.0",
    "prometheus-client>=0.20.0",
    "opentelemetry-api>=1.25.0",
    "pydantic-settings>=2.0.0",
    "dishka>=1.0.0",
]
docs = [
    "zensical>=0.0.37",
    "mkdocstrings-python>=2.0.3",
]
dev = [
    "ruff>=0.6.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
    { include-group = "test" },
    { include-group = "docs" },
]

[tool.uv]
link-mode = "copy"

[tool.hatch.version]
path = "omni_box/__version__.py"

[tool.hatch.build.targets.wheel]
packages = ["omni_box"]

[tool.hatch.build.targets.sdist]
include = ["/omni_box", "/README.md", "/LICENSE", "/CHANGELOG.md"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.mypy]
python_version = "3.12"
files = ["omni_box"]
mypy_path = ["."]
plugins = ["pydantic.mypy"]
check_untyped_defs = true
disallow_untyped_defs = true
implicit_reexport = false
ignore_missing_imports = true
show_error_codes = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unreachable = true


[tool.ruff]
line-length = 120
target-version = "py312"
# Yandex.Disk creates duplicate files with non-ASCII suffixes such as
# ``... (копия с компьютера X).py``. They are not real modules and trip the
# N999 (invalid module name) rule; they should be cleaned up out-of-band.
extend-exclude = ["**/* (копия*).py"]

[tool.ruff.lint]
select = ["F", "E", "W", "I", "B", "N", "S", "C4", "DTZ", "SIM", "TRY", "PERF", "RUF", "UP", "ANN", "T20", "PTH", "PLC", "PLE", "PLW"]
ignore = ["TRY003", "S101", "ANN401", "RUF012", "S104", "S105", "S106", "ANN204", "N802", "PERF401", "SIM105", "S607"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN", "S", "PLC0415", "DTZ", "C408", "RUF003", "RUF059", "SIM117"]
"examples/**/*.py" = ["ANN", "T20", "S", "DTZ"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"


[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
pythonpath = ["."]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "unit: mark a test as a unit test.",
    "integration: mark a test as an integration test.",
]

[tool.coverage.run]
source = ["omni_box"]
omit = [
    "tests/*",
    "*/test_*.py",
    "*/__version__.py",
    "*/testing/*",
    "*/infra/metrics/*",
]

[tool.coverage.report]
fail_under = 90
